--- a/src/app/result/result.css
+++ b/src/app/result/result.css
@@ -6,8 +6,14 @@
 }
 
 p{
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: bold;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    /* font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif; */
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin:  0;
+    padding: 15px 0;
 }
 
 table{
@@ -23,9 +29,18 @@ table th{
     color: white;
     padding: 5px 8px;
     border-radius: 4px;
+    font-size: large;
+    font-weight: bold;
+    font-family:'Arial Narrow', Arial, sans-serif;
+    /* font-family: 'Courier New', Courier, monospace; */
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
 
 tr td{
     background-color: rgba(215, 8, 63, 0.698);
     border-radius: 4px;
+    padding: 5px 0;
+    font-size: large;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
 }
