--- a/src/app/user-input/user-input.css
+++ b/src/app/user-input/user-input.css
@@ -28,15 +28,22 @@ p{
 }
 
 input{
-    padding: 5px;
+    padding: 8px 5px;
     border: none;
     border-radius: 5px;
     width: 100%;
-    font-weight: 600;
+    font-weight: 500;
+    font-size: large;
+    /* font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 label{
     padding: 0 0 1px 4px;
+    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 form{
